Revision history for Perl extension Bio::Graphics.
 
2.18
     - Made handling of min/max scale calculations consistent across all xyplot glyphs and their derivatives.

2.17
     - In segments glyph, fixed bleedover of "deletion" color when a deletion is followed by an insertion.
     - In segments glyph, fixed the display of inserted bases such that they will not bleed into a
       preceding deletion.
     - In segments glyph, fixed the mismatch color highlighting when the alignment is to the negative
       strand.
     - In segments glyph, fixed the default colors for mismatch, insertion and deletion.
     - In segments glyph, fixed treatment of soft clipping as an "insertion"; this will avoid the insertion
       color from appearing at the ends of soft-clipped reads.
     - In gene glyph, fixed occasional linking of two neighboring transcripts.
     
2.16
     - Distinguish between "chromosome" and "global" autoscaling in the xyplot and density glyphs.
       Global autoscaling only works when underlying database is bigwig.
     - Regularized options which select glyph subtypes with an option named "glyph_subtype".

2.15
     - Fixed documentation bug: sort_order options to sort by feature length should be
       "longest" and "shortest" rather than "longer and "shorter".
     - Improved layout algorithm, achieving speedup of ~4x on busy tracks.
     - Fixed font color problems when displaying multiple alignments at DNA level in
       the segments glyph.
     - Fixed problem of DNA alignment indels disappearing from view when they span entire region.
     - Fixed problem of mismatch and indel colors leaking off ends of feature arrows.

2.14
     - Fixes to the way that "fast bump" works so that tracks never fast bump.
       This fixes problems when using groups to simulate subtracks, and the
       groups are of different heights.
     - The group glyph will now add the group labels to the list of track keys